/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-12-03
Bug fix in class convMx1
クラスconvMx1内にあるif文内のバグ修正
outGc-0 >> outGc=0

------------------
2014-12-02
Bug fix about GuideCell in FCONV
FCONVの中にmasterのリビジョン"Bug fix DFI_Finfo.GuideCell"と同様のバグ
m_param->Get_OutputGuideCell() > 1
outGc > 1
があったので、1->0に訂正した。

------------------
2014-12-02
Add method WriteGridFile in method VoxelInit in class convMxN
クラスconvMxNのメソッドVoxelInitにおいて、PLOT3D形式出力の場合、
WriteGridFileを用いてxyzファイルを出力するようにした。
ライブラリの改修で、フィールドデータの出力と格子データの出力を
別々のメソッドに分離したため。

------------------
2014-12-02
Add check for SPH format in FCONV and add API GetDFIType and GetDFITypeString
FCONVで不等間隔格子のデータをSPH形式もしくはBOV形式に変換しようとしたとき、
エラーを返すようにした。また、等間隔格子でも変数の数が1か3以外の場合に
SPH形式に変換しようとしたとき、エラーを返すようにした。
この編集に伴い、DFI種別を取得するAPI関数GetDFIType、GetDFITypeStringを
追加した。また、マクロD_CDM_DFITYPE_NON_UNIFORM_CARTESIANを定義した。

------------------
2014-12-01
accept pull request #10

------------------
2014-11-29
Merge master into branch advance_develop
masterのリビジョン"accept pull request #9"をブランチadvance_developにマージした。
Plot3d対応で追加修正した部分を不等間隔格子対応に取り込むため。
その際、競合が発生したファイルが存在したので解決した。

------------------
2014-11-28
Minor correction about print statements in class cdm_NonUniformDomain
クラスcdm_NonUniformDomain内にあるprint文の訂正を行った。

------------------
2014-11-21
Add CoordinateFileEndian and edit class cdm_NonUniformDomain
不等間隔格子の場合に座標ファイルのエンディアンを示す変数CoordinateFileEndian
を追加した。また、クラスcdm_NonUniformDomainのコードおよびコメント文の
整理を行った。

------------------
2014-11-18
Edit path setting for coordinate file and add check for coordinates
座標ファイルのパス指定をDFIのディレクトリからの相対パス、もしくは絶対パス
で指定できるようにした。
また、WriteInit時に引数に与える座標配列がアロケートされているかの
チェックや、ReadInit時に座標ファイル内の座標データ数のチェックを加えた。

------------------
2014-11-17
Merge master into branch advance_develop
masterのリビジョン"Add ResultFormat at VisIt section, release 0.6.1"を