@@ -15,6 +15,7 @@
  */
 
 #include "convMxN.h"
+#include "cdm_NonUniformDomain.h"
 
 // #################################################################
 // コンストラクタ
@@ -38,10 +39,6 @@ void convMxN::VoxelInit()
   int iret=0;
   const cdm_Domain *DFI_Domain = m_in_dfi[0]->GetcdmDomain();
 
-  //ピッチのセット
-  double dfi_pit[3];
-  for(int i=0; i<3; i++) dfi_pit[i]=DFI_Domain->GlobalRegion[i]/(double)DFI_Domain->GlobalVoxel[i];
-
   //入力領域指示のセット
   int IndexStart[3];
   int IndexEnd[3];
@@ -62,7 +59,9 @@ void convMxN::VoxelInit()
 
   //リージョンのセット
   double region[3];
-  for(int i=0; i<3; i++) region[i]=voxel[i]*dfi_pit[i];
+  for(int i=0; i<3; i++) {
+    region[i] = DFI_Domain->NodeX(IndexEnd[i]) - DFI_Domain->NodeX(IndexStart[i]-1);
+  }
 
   //出力領域の分割数の取得
   int* Gdiv = m_param->Get_OutputDivision();
@@ -164,7 +163,10 @@ void convMxN::VoxelInit()
     tail[i]=tmp_tail[i]/thin_count;
   }
 
-  for(int i=0; i<3; i++) org[i]+=double(head[i])*pit[i];
+  //自ノードの計算領域に合わせて原点シフト(PLOT3D形式については、クラスcdm_DFI_PLOT3D内で実施)
+  if( m_param->Get_OutputFormat() != CDM::E_CDM_FMT_PLOT3D) {
+    for(int i=0; i<3; i++) org[i]+=double(head[i])*pit[i];
+  }
 
   for(int i=0; i<3; i++) {
     head[i]=head[i]+1;
@@ -203,24 +205,84 @@ void convMxN::VoxelInit()
     //格子点出力のとき、出力ガイドセルを0に設定
     if( m_bgrid_interp_flag ) outGc=0; 
 
-    cdm_DFI* dfi=cdm_DFI::WriteInit<double>(MPI_COMM_WORLD,
-                          outdfifname,
-                          m_param->Get_OutputDir(),
-                          DFI_FInfo->Prefix,
-                          m_param->Get_OutputFormat(),
-                          //0,
-                          outGc,
-                          d_type,
-                          DFI_FInfo->NumVariables,
-                          outprocfname,
-                          voxel_thin,
-                          pit,
-                          org,
-                          m_Gdiv,
-                          head,
-                          tail,
-                          m_HostName,
-                          CDM::E_CDM_OFF);
+    cdm_DFI *dfi = NULL;
+    if( DFI_FInfo->DFIType == CDM::E_CDM_DFITYPE_CARTESIAN )
+    {
+      //等間隔格子の場合
+      dfi=cdm_DFI::WriteInit<double>(MPI_COMM_WORLD,
+                                     outdfifname,
+                                     m_param->Get_OutputDir(),
+                                     DFI_FInfo->Prefix,
+                                     m_param->Get_OutputFormat(),
+                                     outGc,
+                                     d_type,
+                                     DFI_FInfo->NumVariables,
+                                     outprocfname,
+                                     voxel_thin,
+                                     pit,
+                                     org,
+                                     m_Gdiv,
+                                     head,
+                                     tail,
+                                     m_HostName,
+                                     CDM::E_CDM_OFF);
+    }
+    else if( DFI_FInfo->DFIType == CDM::E_CDM_DFITYPE_NON_UNIFORM_CARTESIAN )
+    {
+      //不等間隔格子の場合
+      double *coord_X = NULL;
+      double *coord_Y = NULL;
+      double *coord_Z = NULL;
+
+      //全計算領域の座標をWriteInitに渡す
+      coord_X = new double[voxel_thin[0]+1]; //+1はセル数ではなく格子数のため。
+      coord_Y = new double[voxel_thin[1]+1];
+      coord_Z = new double[voxel_thin[2]+1];
+
+      //配列(coord_X,coord_Y,coord_Z)に値をセット
+      //x
+      for(int ni=0; ni<voxel_thin[0]; ni++) {
+        coord_X[ni] = DFI_Domain->NodeX(ni*thin_count);
+      }
+      coord_X[voxel_thin[0]] = DFI_Domain->NodeX(DFI_Domain->GlobalVoxel[0]);
+      //y
+      for(int nj=0; nj<voxel_thin[1]; nj++) {
+        coord_Y[nj] = DFI_Domain->NodeY(nj*thin_count);
+      }
+      coord_Y[voxel_thin[1]] = DFI_Domain->NodeY(DFI_Domain->GlobalVoxel[1]);
+      //z
+      for(int nk=0; nk<voxel_thin[2]; nk++) {
+        coord_Z[nk] = DFI_Domain->NodeZ(nk*thin_count);
+      }
+      coord_Z[voxel_thin[2]] = DFI_Domain->NodeZ(DFI_Domain->GlobalVoxel[2]);
+
+      std::string coord_file = DFI_Domain->GetCoordinateFile();
+      CDM::E_CDM_FILE_TYPE coord_filetype = DFI_Domain->GetCoordinateFileType();
+      CDM::E_CDM_DTYPE coord_fileprecision = DFI_Domain->GetCoordinateFilePrecision();
+      CDM::E_CDM_ENDIANTYPE coord_fileEndian = DFI_Domain->GetCoordinateFileEndian();
+
+      dfi=cdm_DFI::WriteInit<double>(MPI_COMM_WORLD,
+                                     outdfifname,
+                                     m_param->Get_OutputDir(),
+                                     DFI_FInfo->Prefix,
+                                     m_param->Get_OutputFormat(),
+                                     outGc,
+                                     d_type,
+                                     DFI_FInfo->NumVariables,
+                                     outprocfname,
+                                     voxel_thin,
+                                     coord_X,
+                                     coord_Y,
+                                     coord_Z,
+                                     coord_file,
+                                     coord_filetype,
+                                     coord_fileEndian,
+                                     m_Gdiv,
+                                     head,
+                                     tail,
+                                     m_HostName,
+                                     CDM::E_CDM_OFF);
+    }
     if( dfi == NULL ) {
       printf("\tFails to instance dfi\n");
       Exit(0);
@@ -234,7 +296,9 @@ void convMxN::VoxelInit()
 
     //gridファイルを出力(PLOT3D形式，iblankはすべて1にセット)
     if (m_param->Get_OutputFormat() == CDM::E_CDM_FMT_PLOT3D) {
-      size_t size_ib=(voxel_thin[0]+2*outGc)*(voxel_thin[1]+2*outGc)*(voxel_thin[2]+2*outGc);
+      int voxel_ib[3];
+      for(int i=0; i<3; i++) voxel_ib[i] = tail[i]-head[i]+1;
+      size_t size_ib=(voxel_ib[0]+2*outGc)*(voxel_ib[1]+2*outGc)*(voxel_ib[2]+2*outGc);
       int *iblank;
       iblank = new int[size_ib];
       for(int i=0; i<size_ib; i++) {
